--- a/InventoryMangementSystem/App.config
+++ b/InventoryMangementSystem/App.config
@@ -1,5 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="InventoryMangementSystem.Properties.Settings.ConnectionString"
+            connectionString="Data Source=localhost;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+        <add name="InventoryMangementSystem.Properties.Settings.InventoryConnectionString"
+            connectionString="Data Source=Junior;Initial Catalog=Inventory;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8.1" />
     </startup>
