--- a/InventoryMangementSystem/InventoryMangementSystem.csproj
+++ b/InventoryMangementSystem/InventoryMangementSystem.csproj
@@ -36,8 +36,13 @@
     <Reference Include="Guna.UI2, Version=2.0.3.4, Culture=neutral, PublicKeyToken=4015e4865bda28a4, processorArchitecture=MSIL">
       <HintPath>..\packages\Guna.UI2.WinForms.2.0.3.4\lib\net40\Guna.UI2.dll</HintPath>
     </Reference>
+    <Reference Include="IronBarCode, Version=2022.8.0.8024, Culture=neutral, PublicKeyToken=b971bb3971bdf306, processorArchitecture=MSIL">
+      <HintPath>..\packages\BarCode.2022.8.8024\lib\net40\IronBarCode.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -84,11 +89,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Seller.cs">
+    <Compile Include="Attendant.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Seller.Designer.cs">
-      <DependentUpon>Seller.cs</DependentUpon>
+    <Compile Include="Attendant.Designer.cs">
+      <DependentUpon>Attendant.cs</DependentUpon>
     </Compile>
     <Compile Include="Order.cs">
       <SubType>Form</SubType>
@@ -120,8 +125,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Seller.resx">
-      <DependentUpon>Seller.cs</DependentUpon>
+    <EmbeddedResource Include="Attendant.resx">
+      <DependentUpon>Attendant.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Order.resx">
       <DependentUpon>Order.cs</DependentUpon>
