--- a/InventoryMangementSystem/packages.config
+++ b/InventoryMangementSystem/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BarCode" version="2022.8.8024" targetFramework="net481" />
   <package id="Guna.UI2.WinForms" version="2.0.3.4" targetFramework="net481" />
   <package id="Zen.Barcode.Rendering.Framework" version="3.1.10729.1" targetFramework="net481" />
 </packages>
